objects/REST_Service_Calls__c.object
<CustomObject>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Method__c</fullName>
        <label>Request Method</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Action__c</fullName>
        <label>Service Action</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>REST Service Calls</label>
    <nameField>
        <label>REST Service Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REST Service Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>